
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sx9500_data {int* event_enabled; } ;
struct iio_dev {int dummy; } ;
struct iio_chan_spec {scalar_t__ type; size_t channel; } ;
typedef enum iio_event_type { ____Placeholder_iio_event_type } iio_event_type ;
typedef enum iio_event_direction { ____Placeholder_iio_event_direction } iio_event_direction ;


 int EINVAL ;
 int IIO_EV_DIR_EITHER ;
 int IIO_EV_TYPE_THRESH ;
 scalar_t__ IIO_PROXIMITY ;
 struct sx9500_data* iio_priv (struct iio_dev*) ;

__attribute__((used)) static int sx9500_read_event_config(struct iio_dev *indio_dev,
        const struct iio_chan_spec *chan,
        enum iio_event_type type,
        enum iio_event_direction dir)
{
 struct sx9500_data *data = iio_priv(indio_dev);

 if (chan->type != IIO_PROXIMITY || type != IIO_EV_TYPE_THRESH ||
     dir != IIO_EV_DIR_EITHER)
  return -EINVAL;

 return data->event_enabled[chan->channel];
}
